error
error[E0502]: cannot borrow `journal` as immutable because it is also borrowed as mutable
   --> src/main.rs:101:42
    |
81  | fn read_file(file: String, arguments: &[Argument]) -> Result<model::Journal, String> {
    |                                       - let's call the lifetime of this reference `'1`
...
98  |     parser::parse_unbalanced_transactions(&mut journal)?;
    |                                           ------------ mutable borrow occurs here
...
101 |         debuger::print_unbalanced_transactions(&journal);
    |                                                ^^^^^^^^ immutable borrow occurs here
...
110 |     Ok(journal)
    |     ----------- returning this value requires that `journal` is borrowed for `'1`

error[E0499]: cannot borrow `journal` as mutable more than once at a time
   --> src/main.rs:104:33
    |
81  | fn read_file(file: String, arguments: &[Argument]) -> Result<model::Journal, String> {
    |                                       - let's call the lifetime of this reference `'1`
...
98  |     parser::parse_unbalanced_transactions(&mut journal)?;
    |                                           ------------ first mutable borrow occurs here
...
104 |     balancer::balance_transactions(&mut journal)?;
    |                                    ^^^^^^^^^^^^ second mutable borrow occurs here
...
110 |     Ok(journal)
    |     ----------- returning this value requires that `journal` is borrowed for `'1`

error[E0502]: cannot borrow `journal.balanced_transactions` as immutable because it is also borrowed as mutable
   --> src/main.rs:107:40
    |
81  | fn read_file(file: String, arguments: &[Argument]) -> Result<model::Journal, String> {
    |                                       - let's call the lifetime of this reference `'1`
...
98  |     parser::parse_unbalanced_transactions(&mut journal)?;
    |                                           ------------ mutable borrow occurs here
...
107 |         debuger::print_balanced_transactions(&journal.balanced_transactions);
    |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ immutable borrow occurs here
...
110 |     Ok(journal)
    |     ----------- returning this value requires that `journal` is borrowed for `'1`

error[E0515]: cannot return value referencing local variable `journal`
   --> src/main.rs:110:2
    |
98  |     parser::parse_unbalanced_transactions(&mut journal)?;
    |                                           ------------ `journal` is borrowed here
...
110 |     Ok(journal)
    |     ^^^^^^^^^^^ returns a value referencing data owned by the current function

error[E0505]: cannot move out of `journal` because it is borrowed
   --> src/main.rs:110:5
    |
81  | fn read_file(file: String, arguments: &[Argument]) -> Result<model::Journal, String> {
    |                                       - let's call the lifetime of this reference `'1`
...
98  |     parser::parse_unbalanced_transactions(&mut journal)?;
    |                                           ------------ borrow of `journal` occurs here
...
110 |     Ok(journal)
    |     ---^^^^^^^-
    |     |  |
    |     |  move out of `journal` occurs here
    |     returning this value requires that `journal` is borrowed for `'1`

error: aborting due to 5 previous errors; 3 warnings emitted

Some errors have detailed explanations: E0499, E0502, E0505, E0515.
For more information about an error, try `rustc --explain E0499`.
error: could not compile `acc`.

To learn more, run the command again with --verbose.
